# me640_agriculture_produce_picker

./: .dockerignore  .gitignore  README.md  frames_2026-06-22_21.53.11.gv
.devcontainer/: Dockerfile  build_clearpath_configs.sh  setup.fish
.devcontainer/jazzy-minimal/: Dockerfile  devcontainer.json
.devcontainer/linux-gpu/: devcontainer.json
.devcontainer/linux-gpu-bluetooth/: devcontainer.json
.devcontainer/linux-integrated/: devcontainer.json
.devcontainer/windows-wslg/: devcontainer.json
patches/: ros2_kortex-jazzy-robotiq-xacro.patch
ros_ws/: kinova_jazzy.repos
ros_ws/config/clearpath/: a200_gen3_default.yaml
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
ros_ws/src/d435i_localization/: package.xml  setup.cfg  setup.py
ros_ws/src/d435i_localization/config/: ekf.yaml
ros_ws/src/d435i_localization/launch/: bringup.launch.py  imu_test.launch.py
ros_ws/src/d435i_localization/rviz/: imu_test.rviz
ros_ws/src/husky_gen3_msgs/: CMakeLists.txt  package.xml
ros_ws/src/husky_gz/: package.xml  setup.cfg  setup.py
ros_ws/src/husky_gz/husky_gz/: base_link_world_aligned.py  pid_bag_to_csv.py  pid_pose_logger.py
ros_ws/src/husky_gz/launch/: default_sim.launch.py  pid_performance_record.launch.py
ros_ws/src/husky_gz/worlds/: rough_terrain.sdf
ros_ws/src/husky_hardware_tests/: package.xml  setup.cfg  setup.py
ros_ws/src/husky_hardware_tests/husky_hardware_tests/: straight_drive_test.py
ros_ws/src/kinova_ctrl/: package.xml  setup.cfg  setup.py
ros_ws/src/kinova_ctrl/kinova_ctrl/: pid.py  point_trajectory.py  rrmc.py
ros_ws/src/kinova_ctrl/launch/: pid_sim.launch.py  rrmc_follow_ground.launch.py  rrmc_test.launch.py
ros_ws/src/kinova_pose_goal/: CMakeLists.txt  README.md  package.xml
ros_ws/src/kinova_pose_goal/config/: fake_target_frame.yaml  fake_target_frame_video.yaml  pose_tracking.yaml  servo_tracking.yaml
ros_ws/src/kinova_pose_goal/launch/: fake_target_tracking.launch.py  servo_tracking.launch.py
ros_ws/src/kinova_pose_goal/src/: fake_target_frame_node.cpp  pose_tracking_node.cpp
ros_ws/src/shimmer/: package.xml  setup.cfg  setup.py
ros_ws/src/shimmer/shimmer/: shimmer_imu_node.py
scripts/: build_kinova_jazzy.sh  husky_deploy.sh  husky_sim.sh  husky_teleop.sh  setup_kinova_jazzy_dependencies.sh  shimmer_test.py
