<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husky_gz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="inzukyle@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>clearpath_gz</depend>
  <depend>ros_gz_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>rosbag2_py</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
